fix layout shift on article page

--- a/src/components/Article/Article.module.css
+++ b/src/components/Article/Article.module.css
@@ -28,9 +28,8 @@
 .container {
   display: grid;
   grid-auto-flow: column;
-  justify-content: center;
   position: relative;
-
+  grid-template-columns: auto 1fr;
   width: 100%;
   background: #ebebeb;
 }
